static/less/pages/course/courseware.less
.course-wrapper {
    .size(100%, auto);

    padding: 0;

    .course-index {
        .square(100%);
        .make-md-column(3);
        .make-lg-column(3);

        padding: 0;
        display: block;
        font: inherit;
        background: none;
        border-radius: 0;
        border: 0 none;
        transition: none;
        box-sizing: border-box;
        border-right: 1px solid @gg-border-grey;

        @media (max-width: @screen-sm-max) {
            border: 0 none;
        }

        #accordion {
            font: inherit;
            font-size: 0.9em;

            .chapter {
                border-radius: 0;
                box-shadow: none;
                border-bottom: 1px solid @gg-border-grey;
                padding: 0;

                &:last-child {
                    border: 0 none;
                }

                &.is-open {
                    font-weight: @headings-font-weight;
                }

                h3 {
                    font: inherit;
                    padding: 0.6em 0.8em;

                    .ui-accordion-header-icon {
                        left: 0.6em;
                    }

                    a {
                        font: inherit;
                        color: @black;

                        &:hover {
                            text-decoration: none;
                        }
                    }
                }

                ul {
                    font: inherit;
                    font-weight: 500;
                    background: none;
                    background-color: @white;
                    padding: 0.6em;

                    li {
                        margin: 0 0 0.6em 0;

                        &:last-child {
                            margin: 0;
                        }

                        a {
                            font: inherit;
                            color: @gg-blue;
                            background: none;
                            padding: 0.3em 0.5em;
                            border-radius: @default-border-radius;
                            border: 1px solid transparent;
                            box-shadow: none;

                            &:hover {
                                border-color: @gg-border-grey;
                            }

                            p {
                                font: inherit;
                                color: inherit;

                                &.subtitle {
                                    color: @black;
                                }
                            }
                        }

                        &.graded {
                            a:after {
                                content: '\f017';
                                font-family: 'FontAwesome';
                                font-size: 1.2em;
                                position: absolute;
                                right: 0.5em;
                                bottom: 0.15em;
                            }
                        }

                        &.active {
                            font: inherit;

                            a {
                                border-color: @gg-blue;
                                background-color: @gg-blue;
                                color: @white;
                            }
                        }
                    }
                }
            }
        }
    }

    .course-content {
        .square(100%);
        .make-md-column(9);
        .make-lg-column(9);

        font: inherit;
        display: block;
        overflow: hidden;
        margin: 0;
        padding: 30px;

        @import 'xblock.less';

        .sequence-nav {
            margin: 0 0 2em 0;
            border: 0 none;

            ul {
                li {
                    .size(auto, 44px);

                    background: none;
                    box-shadow: none;
                    border: 3px solid @gg-border-grey;
                    overflow: hidden;

                    &.prev {
                        left: 0;
                        border-right: 0 none;
                    }

                    &.next {
                        right: 0;
                        border-left: 0 none;
                    }

                    a {
                        margin: 0;
                        transition: none;
                        overflow: hidden;
                        background-position: center 12px;

                        &.disabled {
                            background-color: @gg-border-grey;
                        }
                    }
                }
            }

            .sequence-list-wrapper {
                background: none;
                box-shadow: none;
                border: 0 none;
                margin: 0 43px;
                padding: 0;

                .left-shadow, .right-shadow {
                    display: none;
                }

                ol {
                    padding: 0;

                    li {
                        min-width: 0;

                        &:first-child a {
                            border-left: 3px solid @gg-border-grey;
                        }

                        &:last-child a {
                            border-right: 3px solid @gg-border-grey;
                        }

                        a {
                            .size(auto, 44px);

                            text-align: center;
                            background: none;
                            border: 0 none;
                            box-shadow: none;
                            color: @white;
                            border-top: 3px solid @gg-border-grey;
                            border-bottom: 3px solid @gg-border-grey;

                            @media (max-width: @screen-sm-max) {
                                display: none;
                            }

                            &.active {
                                border-color: @gg-blue;
                                color: @gg-blue;

                                @media (max-width: @screen-sm-max) {
                                    display: block;
                                    border: 3px solid @gg-blue;
                                }

                                &.progress-none {
                                    border-color: @gg-blue;
                                    color: @gg-blue;
                                }

                                &.progress-some {
                                    border-color: @gg-orange;
                                    color: @gg-orange;
                                }

                                &.progress-in_progress {
                                    border-color: @gg-orange;
                                    color: @gg-orange;
                                }

                                &.progress-done {
                                    border-color: @gg-emerald;
                                    color: @gg-emerald;
                                }
                            }

                            &.inactive, &.visited {
                                &.progress-none, &.progress-0 {
                                    background-color: @gg-border-grey;

                                    &:hover {
                                        background: @white;
                                        color: @gg-border-grey;
                                    }
                                }

                                &.progress-some, &.progress-in_progress {
                                    background-color: @gg-orange;
                                    border-color: @gg-orange;

                                    &:hover {
                                        background-color: @white;
                                        color: @gg-orange;
                                    }
                                }

                                &.progress-done {
                                    background-color: @gg-emerald;
                                    border-color: @gg-emerald;

                                    &:hover {
                                        background-color: @white;
                                        color: @gg-emerald;
                                    }
                                }
                            }

                            &:hover {
                                text-decoration: none;
                            }

                            &:after {
                                font: inherit;
                                color: inherit;
                                content: '\f040';
                                font-family: 'FontAwesome';
                                font-size: 1.2em;
                                display: block;
                                margin: 0.2em auto 0;
                                padding: 0
                            }

                            &.seq_video:after {
                                content: '\f03d';
                            }

                            &.seq_problem:after {
                                content: '\f040';
                            }

                            > p {
                                display: none;
                            }
                        }
                    }
                }
            }
        }

        h2 {
            margin-top: 0
        }

        .sequence-bottom {
            margin: 2em 0;
            text-align: center;

            ul {
                li {
                    .size(50px, 44px);

                    background: none;
                    box-shadow: none;
                    border: 3px solid @gg-border-grey;
                    overflow: hidden;

                    &.prev {
                        border-right-width: 1px;
                    }

                    &.next {
                        border-left-width: 1px;
                    }

                    a, a:hover {
                        background-position: center 0.85em;

                        &.disabled {
                            background-color: @gg-border-grey;
                        }
                    }
                }
            }
        }
    }
 }

